Fix background overflow error
Remove the fixed height of background div, and add clear-fix
this will make the dark overlay stretch over the background div

--- a/UI/css/general.css
+++ b/UI/css/general.css
@@ -63,6 +63,7 @@ p
 	top: 0;
 	width:100%;
 	height:100%;
+	padding:0 0 70px 0;
 }
 
 /*****************************************************
@@ -155,8 +156,7 @@ p
 .hero{
 	background-image: url("../assets/images/hero-background.jpg");
 	background-size: cover;
-	height:80vh;
-	overflow: auto;
+	overflow: hidden;
 }
 
 .hero-content{
@@ -263,8 +263,3 @@ label{
 .search-box, .search .btn{
 	font-size: 1.5em;
 }
-
-
-/****************************************************
-					FOOTER
-****************************************************/
